--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PersonToPersonChat"></activity>
-        <activity android:name=".AllUsers"></activity>
-        <activity android:name=".Login">
+        <activity android:name=".Activities.About"></activity>
+        <activity android:name=".Activities.PersonToPersonChat" />
+        <activity android:name=".Activities.AllUsers" />
+        <activity android:name=".Activities.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Register" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Activities.Register" />
+        <activity android:name=".Activities.MainActivity" />
     </application>
 
 </manifest>
