--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,23 +6,32 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.About"></activity>
-        <activity android:name=".Activities.PersonToPersonChat" />
-        <activity android:name=".Activities.AllUsers" />
-        <activity android:name=".Activities.Login">
+        <activity android:name=".Activities.Profile"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.About"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.PersonToPersonChat"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.AllUsers"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.Login"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.Register" />
-        <activity android:name=".Activities.MainActivity" />
+        <activity android:name=".Activities.Register"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.MainActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
